--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -19,6 +19,10 @@ http {
       proxy_set_header Host $http_host;
       proxy_redirect off;
       proxy_pass http://unicorn;
+
+      location ~* \.(ttf|ttc|otf|eot|woff|svg|font.css)$ {
+        add_header Access-Control-Allow-Origin *;
+      }
     }
   }
 }
